--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,55 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Bridge — Overview"
+description: "What Bridge is, why it matters, and the four product categories for builders and operators."
 ---
 
-## Setting up
+## Build with banks, ship like a startup
 
-Get your documentation site up and running in minutes.
+Bridge lets software teams launch financial features while banks/FSPs retain custody and compliance. We provide standardized adapters, strong governance, and developer‑first APIs.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+<Banner>
+Balanced for both founders and engineers: business value at a glance, with the depth developers need to integrate quickly.
+</Banner>
 
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Embedded Finance"
+    icon="wallet"
+    href="/services/embedded-finance"
   >
-    Edit your docs locally and preview them in real time.
+    Wallets and Lending with credit scoring, reporting and reconciliation. Launch stored‑value and credit without becoming a bank.
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="Payments & Transfers"
+    icon="money-bill-transfer"
+    href="/services/payments-transfers"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+    Merchant onboarding (TanQR), QR payments, and routing across local rails (bank/PSP/MNO), with webhooks and reconciliation.
   </Card>
   <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
+    title="Open Banking & Identity"
+    icon="id-card"
+    href="/services/open-banking-identity"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Account verification, consented data access, and KYC sharing.
+  </Card>
+  <Card
+    title="FSP Integrations"
+    icon="building-columns"
+    href="/services/fsp-integrations"
+  >
+    Turnkey adapters to banks/PSPs/MNOs including TIPS/TanQR, GL feeds, and regulatory exports.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Onboarding at a glance
 
-Everything you need to create world-class documentation.
+- For businesses: create a sandbox account and share KYB details
+- Select the services you need (Embedded Finance, Payments, Open Banking); we issue credentials and permissions
+- For FSPs: register your platform, provide API credentials and supported products; we run connectivity checks
+- Environments: start in sandbox; move to production after tests and approval
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
+<Card title="Onboarding" icon="user-plus" href="/onboarding" horizontal>
+  Learn how businesses and FSPs join Bridge, what credentials you receive, and how sandbox/production setup works.
 </Card>
